Añadido modo láser.