@@ -2,3 +2,4 @@ Para VM-Options en windows
 
 --enable-native-access=javafx.graphics
 --enable-native-access=com.github.kwhat.jnativehook
+--enable-native-access=com.sun.jna
